# KallumOS

./: .gitignore  README.md  all testable features.txt  ideas.txt  releaseNotes.md
source/KallumOS/: AppLauncher.cpp  AppLauncher.h  Button.cpp  Button.h  CMakeLists.txt  Control.cpp  Control.h  CreateAccount.cpp  CreateAccount.h  Desktop.cpp  Desktop.h  DiffMatrixApp.cpp  DiffMatrixApp.h  FileSaver.cpp  FileSaver.h  FileSelector.cpp  FileSelector.h  FileViewer.cpp  FileViewer.h  Helper.h  Input.cpp  Input.h  InputPress.h  KallumOS.cpp  KallumOS.h  KallumOS.sln  KallumOS.vcxproj  KallumOS.vcxproj.filters  Kode.cpp  Kode.h  Login.cpp  Login.h  Process.cpp  Process.h  State.cpp  State.h  TaskManager.cpp  TaskManager.h  Taskbar.cpp  Taskbar.h  (+13 more)
source/KallumOS/KallumOS/: AppLauncher.cpp  AppLauncher.h  Button.cpp  Button.h  Control.cpp  Control.h  CreateAccount.cpp  CreateAccount.h  Desktop.cpp  Desktop.h  FileSelector.cpp  FileSelector.h  Helper.h  IPFetch.cpp  IPFetch.h  Input.cpp  Input.h  InputPress.h  KallumOS.cpp  KallumOS.h  KallumOS.vcxproj  KallumOS.vcxproj.filters  KeyPress.h  Kode.cpp  Kode.h  Login.cpp  Login.h  Point.h  Process.cpp  Process.h  State.cpp  State.h  TaskManager.cpp  TaskManager.h  Taskbar.cpp  Taskbar.h  TestWindow.cpp  Tetris.cpp  Tetris.h  TextBox.cpp  (+8 more)
